# SuperPointCPP

./: .gitignore  CMakeLists.txt  README.md  detectPoints.cpp
assets/: fast_detector.py
include/: PointTracker.h
src/: PointTracker.cpp  SuperPointFrontend.cpp
